---
source: modifications.sqltest
expression: |-
  INSERT OR IGNORE INTO users (id, email, name, status)
      VALUES (1, 'jane@example.com', 'Jane Doe', 'active');
info:
  statement_type: INSERT
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN


BYTECODE
addr  opcode         p1  p2  p3  p4                p5  comment
   0  Init            0  34   0                     0  Start at 34
   1  OpenWrite       1   3   0                     0  root=3; iDb=0
   2  Integer         1   2   0                     0  r[2]=1
   3  SoftNull        3   0   0                     0
   4  String8         0   4   0  jane@example.com   0  r[4]='jane@example.com'
   5  String8         0   5   0  Jane Doe           0  r[5]='Jane Doe'
   6  String8         0   6   0  active             0  r[6]='active'
   7  OpenWrite       0   4   0                     0  root=4; iDb=0
   8  NotNull         2  10   0                     0  r[2]!=NULL -> goto 10
   9  Goto            0  12   0                     0
  10  MustBeInt       2   0   0                     0
  11  Goto            0  13   0                     0
  12  NewRowid        1   2   0                     0  r[2]=rowid
  13  Affinity        3   4   0                     0  r[3..7] = D, B, B, B
  14  NotExists       1  16   2                     0
  15  Goto            0  32   0                     0
  16  Copy            4   8   0                     0  r[8]=r[4]
  17  Copy            2   9   0                     0  r[9]=r[2]
  18  Affinity        8   1   0                     0  r[8..9] = B
  19  NoConflict      0  22   8  1                  0  key=r[8..8]
  20  Goto            0  32   0                     0
  21  Halt         2067   0   0  users.email        0
  22  IsNull          4  32   0                     0  if (r[4]==NULL) goto 32
  23  IsNull          5  32   0                     0  if (r[5]==NULL) goto 32
  24  MakeRecord      3   4   7                     0  r[7]=mkrec(r[3..6])
  25  Copy            4  10   0                     0  r[10]=r[4]
  26  Copy            2  11   0                     0  r[11]=r[2]
  27  MakeRecord     10   2  12                     0  r[12]=mkrec(r[10..11]); for sqlite_autoindex_users_1
  28  IdxInsert       0  12  10                     2  key=r[12]
  29  Insert          1   7   2  users              0  intkey=r[2] data=r[7]
  30  Goto            0  32   0                     0
  31  Goto            0  32   0                     0
  32  Goto            0  33   0                     0
  33  Halt            0   0   0                     0
  34  Transaction     0   2  10                     0  iDb=0 tx_mode=Write
  35  Goto            0   1   0                     0
